# latex-template

./: .editorconfig  .gitignore  .gitmodules  .latexmkrc  CHECKLIST  Makefile  README  README.md  THANKS  default.nix  design.tex  diplom.tex  evaluation.tex  flake.nix  futurework.tex  implementation.tex  introduction.tex  own.bib  shell.nix
.github/workflows/: build.yml
checkbiw/: MAINTAINER  Makefile  TODO
checkbiw/contrib/diction/: Makefile.in  NEWS  README  config.h.in  configure  configure.in  de  de.po  diction.1.in  diction.c  diction.pot  diction.spec  diction.spec.in  diction.texi.in  en  getopt.c  misc.c  misc.h  sentence.c  sentence.h  style.1.in  style.c
checkbiw/contrib/diction/test/: rundiction.in  test01  test02  test03  test04  test05  test06
checkbiw/diction/: Makefile
checkbiw/doc/: Makefile  manpage.txt  manual.gosh  mustread.txt  own.bib
checkbiw/src/: Makefile  biw  checkbiw  cite-space  emdash-nospace  emdash-space  lang-american  passive
content/: 00_title.tex  01_disclaimer.tex  02_abstract.tex  10_introduction.tex  20_state.tex  30_design.tex  40_implementation.tex  50_evaluation.tex  60_futurework.tex  70_conclusion.tex
nix/: build.nix  release.nix  sources.json  tex-toolchain.nix  thesis.nix
preamble/: color.tex  newcommands.tex  packages.tex  style.tex
